# xVedio

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
configs/: pipeline.yaml
docs/: deployment.md
scripts/: launch_mcp_server.sh  launch_vllm_qwen3_vl_32b_awq.sh  launch_vllm_qwen3_vl_8b_bf16.sh  manage_vl_server.sh  quantize_qwen3_vl_awq.sh  run_single_video.sh
server/: README.md
server/app/: jobs.py  main.py
tests/: test_bff_server.py  test_cli_progress.py  test_downloaders.py  test_fusion.py  test_mcp_jobs.py
video_understanding/: __init__.py  ab_eval.py  asr.py  cli.py  config.py  fusion.py  mcp_jobs.py  mcp_server.py  media.py  quantize_awq.py  summarize.py  utils.py  vl_client.py
video_understanding/downloaders/: __init__.py  base.py  ideaflow.py  registry.py  twitter_video_downloader.py  utils.py  yt_dlp.py
